added temporary page layouts, compatibility logic, and ajax call for survey

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Friend Finder</title>
@@ -10,7 +10,26 @@
 
 </head>
 <body>
-    Welcome to the home page!
+
+	<div class="container">
+		
+		<div class="jumbotron">
+			<div class="h2"> Friend Finder</div>
+			<div class="h4">Answer a few basic questions. </div>
+			<div class="h4">Then find the friend with the greatest compatibility!</div>
+			<div>
+				<a href="/survey"><button class="btn btn-primary">Go to Survey</button></a>	
+			</div>
+		</div>
+
+	    <footer class="footer">
+	      <div class="container">
+		        <div><a href="/api/friends">API Friends List</a> | <a href="https://github.com/tstorti/FriendFinder">GitHub Repo</a></div>
+	      </div>
+	    </footer>
+
+	</div>
+
 </body>
 </html>
 
