added validation check and changed port number for heroku deployment

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -159,7 +159,7 @@
                 </select>
             </div>
         </div>
-
+        <div class="warning" id="warning"></div>
         <!-- Submit Button -->
         <div>
             <button type="submit" class="btn-submit" id="submit">Submit</button>
